[gd_scene load_steps=13 format=3 uid="uid://sf3lvxf1n2uo"]

[ext_resource type="PackedScene" uid="uid://p3a85s2c5cos" path="res://Scenes/Stream/statBar.tscn" id="1_2e687"]
[ext_resource type="Script" path="res://Scripts/Stream/streamerStats.gd" id="1_4m1jq"]
[ext_resource type="Theme" uid="uid://bciinuu1msc6n" path="res://Assets/Themes/MainMenuUI.tres" id="3_fv1vh"]
[ext_resource type="Texture2D" uid="uid://dmrmnq0pmlowv" path="res://Assets/Sprites/UI/healthIcon.png" id="3_gwd4c"]
[ext_resource type="Texture2D" uid="uid://dby7kuc33rjjs" path="res://Assets/Sprites/UI/moneyIcon.png" id="4_6r7x8"]
[ext_resource type="Texture2D" uid="uid://cgfsqdtkpb1et" path="res://Assets/Sprites/UI/healthParticle.png" id="6_7y5tf"]

[sub_resource type="Animation" id="Animation_ms1ke"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Money/Bar:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.19, 0.6, 0, 1)]
}

[sub_resource type="Animation" id="Animation_6qese"]
resource_name = "turn_red"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Money/Bar:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.903408, 0.179983, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q6uy0"]
_data = {
"RESET": SubResource("Animation_ms1ke"),
"turn_red": SubResource("Animation_6qese")
}

[sub_resource type="Gradient" id="Gradient_n0eju"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_jy4lr"]
gradient = SubResource("Gradient_n0eju")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_s183q"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(4, 24, 1)
gravity = Vector3(0, -20, 0)
scale_min = 4.0
scale_max = 4.0
color_ramp = SubResource("GradientTexture1D_jy4lr")

[node name="StreamerStats" type="Node2D"]
script = ExtResource("1_4m1jq")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.47788, 0.47788, 0.47788, 1)
polygon = PackedVector2Array(0, 0, 15, 0, 15, 8, 0, 8)

[node name="Health" parent="." instance=ExtResource("1_2e687")]
position = Vector2(0, 8)

[node name="Background" parent="Health" index="0"]
modulate = Color(0.1, 0.1, 0.1, 1)

[node name="HealthIcon" type="Sprite2D" parent="."]
position = Vector2(4, 4)
texture = ExtResource("3_gwd4c")

[node name="Money" parent="." instance=ExtResource("1_2e687")]
position = Vector2(7, 8)

[node name="Bar" parent="Money" index="1"]
self_modulate = Color(0.19, 0.6, 0, 1)

[node name="MoneyIcon" type="Sprite2D" parent="."]
position = Vector2(12, 4)
texture = ExtResource("4_6r7x8")

[node name="MoneyCount" type="Label" parent="."]
offset_left = 16.0
offset_top = -5.0
offset_right = 31.0
offset_bottom = 8.0
theme = ExtResource("3_fv1vh")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "0"

[node name="MoneyAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q6uy0")
}

[node name="RegenParticles" type="GPUParticles2D" parent="."]
position = Vector2(4, 37)
emitting = false
amount = 4
process_material = SubResource("ParticleProcessMaterial_s183q")
texture = ExtResource("6_7y5tf")

[editable path="Health"]
[editable path="Money"]
